# VGLgfx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TODO.txt  imgui.ini  main.cpp
Editor/: Editor.cpp  (+1 more)
VGLgfx/: CMakeLists.txt  CMakeSettings.json  TODO.txt
VGLgfx/data/CMakeResources/: icon.rc
VGLgfx/data/Shaders/: GBuffer.frag.glsl  GBufferLightPass.frag.glsl  UberPBR.frag.glsl  UberPBR.vert.glsl
VGLgfx/data/Shaders/3DDT/: frag.spv  test.frag  test.vert
VGLgfx/data/Shaders/3DPBR/: frag.spv  test.frag  test.vert
VGLgfx/data/Shaders/3DPointLight/: test.frag
VGLgfx/data/Shaders/3DSPM/: test.frag
VGLgfx/data/Shaders/AtmosphericScattering/: frag.spv
VGLgfx/data/Shaders/Bloom/: HDR.frag  bloom.frag  frag.spv
VGLgfx/data/Shaders/Bloom/Downsampling/: downsampling.frag  frag.spv
VGLgfx/data/Shaders/Bloom/Prefilter/: frag.spv  prefilter.frag
VGLgfx/data/Shaders/Bloom/Upsampling/: frag.spv
VGLgfx/data/Shaders/BokehDOF/: DOF.frag  compile.bat
VGLgfx/data/Shaders/FXAA/: FXAA.frag  compile.bat
VGLgfx/data/Shaders/Font/: compile.bat  vert.spv
VGLgfx/data/Shaders/G-Buffer/: test.frag  test.vert
VGLgfx/data/Shaders/GenIrradiance/: vert.spv
VGLgfx/data/Shaders/GenPreFiltered/: GenPreFiltered.frag
VGLgfx/data/Shaders/HDR/: HDR.frag  compile.bat  frag.spv
VGLgfx/data/Shaders/NT3D/: test.frag  test.vert
VGLgfx/data/Shaders/SM3D/: compile.bat  sm3d.frag
VGLgfx/data/Shaders/SSR/: SSR.frag  SSR.vert  SSR1.frag  compile.bat  frag.spv  unused.frag
VGLgfx/include/: BufferLayout.h  Console.cpp  DefaultECSComponents.h  Font.cpp  Font.h  GFXDefinitions.h  Octree.h  RenderPipelines.cpp  RenderPipelines.h  Scene.cpp  Scene.h  VGL_Internal.h  VGL_Logger.cpp  VGL_Logger.h  VGLgfx.h
VGLgfx/include/Application/: Application.cpp  Application.h  InputManager.cpp  InputManager.h  Layer.h  LayerStack.h  RenderAPI.h
VGLgfx/include/ECS/: Component.cpp  ECS.cpp  ECS.h
VGLgfx/include/Events/: ApplicationEvent.cpp  KeyEvent.cpp  MouseEvent.h
VGLgfx/include/Math/: Camera.cpp  Camera.h  Transform.h  Vector.cpp  Vector.h
VGLgfx/include/Platform/: BaseWindow.cpp  BaseWindow.h  BufferLayout.h  Definitions.h
VGLgfx/include/Platform/OpenGL/: GlFramebufferAttachment.h  GlWindow.cpp  GlWindow.h
VGLgfx/include/Platform/Vulkan/: VkBuffers.cpp  VkBuffers.h  VkCommandBuffer.cpp  VkCommandBuffer.h  VkContext.cpp  VkContext.h  VkDefinitions.h  VkDescriptor.cpp  VkDescriptor.h  VkDescriptorLayoutCache.h  VkFramebuffer.cpp  VkFramebuffer.h  VkFramebufferAttachment.cpp  VkFramebufferAttachment.h  VkGraphics_Internal.cpp  VkGraphics_Internal.h  VkImGui.h  VkImage.cpp  VkImage.h  VkRenderPass.cpp  VkRenderPass.h  VkRenderer.cpp  VkRenderer.h  VkShader.cpp  VkShader.h  VkWindow.cpp  VkWindow.h
VGLgfx/include/Utils/: Cache.h  Logger.cpp
VGLgfx/include/VGL-2D/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
VGLgfx/include/VGL-2D/Physics2D/: AABBCollider.cpp  CircleCollider.cpp  CircleCollider.h  RigidBody.cpp  SATCollider.cpp
VGLgfx/include/VGL-3D/: Cuboid.cpp  Particles.h  Shapes.cpp  Shapes.h  SkyBox.h  Sphere.h  Terrain.h
VGLgfx/include/VGL-3D/Mesh/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  OBJ_Loader.cpp
VGLgfx/include/VGL-3D/Physics3D/: AABBCollider.cpp  PlaneCollider.cpp  SphereCollider.h
VGLgfx/include/VGLgfx/: Console.h  DefaultECSComponents.h  Font.h  GFXDefinitions.h  RenderPipelines.cpp  RenderPipelines.h  Scene.cpp  VGL_Internal.h  VGLgfx.h
VGLgfx/include/VGLgfx/Application/: Application.cpp  Application.h  InputManager.cpp  Layer.cpp  LayerStack.cpp  RenderAPI.h
VGLgfx/include/VGLgfx/ECS/: Component.h  ECS.cpp  System.cpp  System.h
VGLgfx/include/VGLgfx/Events/: ApplicationEvent.h  Event.h  MouseEvent.cpp
VGLgfx/include/VGLgfx/Math/: Camera.cpp  Camera.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Transform.cpp  Vector.cpp
VGLgfx/include/VGLgfx/Platform/: BaseWindow.cpp  BaseWindow.h  BufferLayout.cpp  Definitions.h
VGLgfx/include/VGLgfx/Utils/: FileGUI.cpp  FileGUI.h  Logger.h  ThreadPool.h
VGLgfx/include/VGLgfx/VGL-2D/: VertexShape.h
VGLgfx/include/VGLgfx/VGL-3D/: Cuboid.h  SkyBox.cpp
VGLgfx/libs/PPK_ASSERT/: ppk_assert.cpp
VGLgfx/libs/freetype/src/: CMakeLists.txt
VGLgfx/references/: Material.h  RenderPipelines.cpp  TODO.txt  VkBaseRenderer.cpp  VkBaseRenderer.h  VkFramebufferAttachment.cpp  VkGraphics_Internal.cpp  VkGraphics_Internal.h  VkImGui.h  VkRenderer.cpp  VkRenderer.h  VulkanRenderer.cpp  VulkanRenderer.h
VGLgfx/samples/: vxgi.cpp
VGLgfx/samples/data/Shaders/: GBuffer.vert.glsl  GBufferLightPass.frag.glsl
VGLgfx/test/: CMakeLists.txt  VGLgfxTest.cpp  VGLgfxTest2D.cpp  VGLgfxTest3D.cpp  imgui.ini
VGLgfx/test/debug/: compiled_shader.txt  compiled_shader_preprocesed.txt  shader_error_log.txt
VGLgfxEditor/: CMakeLists.txt  CMakeSettings.json  VGLgfxEditor.h  main.cpp
VGLgfxEditor/data/CMakeResources/: icon.aps
VGLgfxEditor/data/Shaders/: GBuffer.frag.glsl
VGLgfxEditor/data/Shaders/AtmosphericScattering/: AtmosphericScattering.vert  compile.bat  frag.spv  vert.spv
VGLgfxEditor/data/Shaders/AtmosphericScatteringToCubeMap/: AtmosphericScattering.frag  vert.spv
VGLgfxEditor/data/Shaders/BokehDOF/: compile.bat
VGLgfxEditor/data/Shaders/Circle2D/: compile.bat  frag.spv
VGLgfxEditor/data/Shaders/FXAA/: FXAA.frag  frag.spv
VGLgfxEditor/data/Shaders/GenIrradiance/: GenIrradiance.frag  compile.bat
VGLgfxEditor/data/Shaders/GenPreFiltered/: GenPreFiltered.vert  compile.bat
VGLgfxEditor/data/Shaders/HDR/: HDR.frag
VGLgfxEditor/data/Shaders/HDRTOCUBE/: HDRTOCUBE.frag  compile.bat
VGLgfxEditor/data/Shaders/Imgui/: compile.bat  vert.spv
VGLgfxEditor/data/Shaders/Particles/: particle.frag
VGLgfxEditor/data/Shaders/SM3D/: vert.spv
VGLgfxEditor/data/Shaders/SMP3D/: frag.spv  sm3d.frag
VGLgfxEditor/data/Shaders/SSR/: compile.bat  frag.spv
VGLgfxEditor/data/Shaders/Shape2D/: Shape2D.frag  Shape2D.vert  frag.spv
VGLgfxEditor/data/Shaders/SkyBox/: compile.bat  test.vert
VGLgfxEditor/projects/: SSR_Test.vgls
lib/soil/: CMakeLists.txt  README.md
(+375 files in other folders)
